# spidermon

./: .bumpversion.cfg  .coveragerc  .drone.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile-testing  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  conftest.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  to-do.txt  tox.ini
.github/workflows/: main.yml  publish.yml
_examples/: output.txt  output_json.txt
_spidermon/: __init__.py  context.py  debug.py  exceptions.py  settings.py
_spidermon/actions/: definitions.py  managers.py
_spidermon/monitors/: __init__.py
_spidermon/rules/: __init__.py  managers.py  results.py
_tests/actions/: test_actions.py  test_managers.py
_tests/fixtures/: actions.py  schemas.py  stats.py
_tests/rules/: test_expressions.py  test_rules.py
docs/: Makefile  conf.py  getting-started.md  getting-started.rst  index.rst  item-validation.rst  monitors.rst  requirements-docs.txt  requirements.txt  settings.rst  tutorial.md
docs/actions/: custom-action.rst  discord-action.rst  email-action.rst  file-report-action.rst  index.rst  job-tags-action.rst  sentry-action.rst  slack-action.rst  sns-action.rst  telegram-action.rst
docs/howto/: configuring-discord-for-spidermon.rst  configuring-slack-for-spidermon.rst  configuring-telegram-for-spidermon.rst  index.rst  required-fields-coverage-validation.rst  stats-collection.rst
docs/source/: actions.rst  conf.py  configuring-slack-for-spidermon.rst  configuring-telegram-for-spidermon.rst  description.rst  expression-monitors.rst  getting-started.rst  guide_to_slack_bot.rst  index.rst  installation.rst  item-validation.rst  mixins.rst  monitors.rst  scipts.rst  settings.rst  stats-collection.rst  using-the-cli.rst
docs/source/actions/: custom-action.rst  discord-action.rst  email-action.rst  file-report-action.rst  index.rst  job-tags-action.rst  sentry-action.rst  slack-action.rst  sns-action.rst  telegram-action.rst
docs/source/howto/: configuring-discord-for-spidermon.rst  configuring-slack-for-spidermon.rst  configuring-telegram-for-spidermon.rst  index.rst  required-fields-coverage-validation.rst  stats-collection.rst
docs/source/topics/: actions.rst  settings.rst
examples/: example_01.py  monitors.py  output.txt
examples/tutorial/.scrapy/stats/: quotes_stats_history
examples/tutorial/tutorial/: actions.py  items.py  middlewares.py  monitors.py  pipelines.py  settings.py  validators.py
examples/tutorial/tutorial/schemas/: quote_item.json
examples/tutorial/tutorial/spiders/: quotes.py
requirements/: docs.txt  slack.txt  tests.txt  validation.txt
spidermon/: __init__.py  actions.py  context.py  data.py  debug.py  decorators.py  exceptions.py  hubstorage.py  loaders.py  managers.py  monitors.py  objects.py  options.py  python.py  results.py  rules.py  runners.py  serialization.py  settings.py  stats.py  suites.py  templates.py  testing.py  utils.py
spidermon/actions/: definitions.py  managers.py  results.py
spidermon/commands/: __init__.py  enable.py  prompts.py  settings.py  setup.py  version.py
spidermon/contrib/actions/: __init__.py  templates.py
spidermon/contrib/actions/discord/: __init__.py  notifiers.py
spidermon/contrib/actions/email/: __init__.py  s3.py  ses.py  smtp.py
spidermon/contrib/actions/jobs/: tags.py
spidermon/contrib/actions/reports/: __init__.py  files.py  jobs.py  s3.py
spidermon/contrib/actions/sentry/: __init__.py
spidermon/contrib/actions/slack/: __init__.py  notifiers.py
spidermon/contrib/monitors/: validation.py
spidermon/contrib/scrapy/: extensions.py  monitors.py  pipelines.py  runners.py  stats.py
spidermon/contrib/stats/: analyzer.py  counters.py  statscollectors.py
spidermon/contrib/utils/: attributes.py  spider.py
spidermon/contrib/validation/: __init__.py  _jsonschema.py  _schematics.py  base.py  messages.py  translator.py  utils.py  validator.py
spidermon/core/: actions.py  factories.py  monitors.py  options.py  suites.py
spidermon/decorators/: __init__.py  actions.py  commands.py  monitors.py
spidermon/monitors/: results.py
spidermon/pytest/plugins/: filter_monitors.py
spidermon/python/: __init__.py  context.py  factory.py  interpreter.py  monitors.py  schemas.py
spidermon/results/: items.py  monitor.py  steps.py  text.py
spidermon/rules/: definitions.py
spidermon/scripts/: check_failed_jobs.py
spidermon/templates/: monitor_suite.py.tmpl
spidermon/utils/: commands.py  field_coverage.py  file.py  hubstorage.py  monitors.py  oldstats.py  settings.py  text.py  web.py  zyte.py
tests/: __init__.py  conftest.py  test_actions.py  test_add_field_coverage.py  test_cerberus_translator.py  test_context.py  test_data.py  test_descriptions.py  test_expressions.py  test_extension.py  test_item_scraped_signal.py  test_levels.py  test_loaders.py  test_managers.py  test_messagetranslator.py  test_monitors.py  test_names.py  test_naming.py  test_ordering.py  test_rules.py  test_spidermon_signal_connect.py  test_stats.py  test_suites.py  test_templateloader.py  test_validators_cerberus.py  test_validators_jsonschema.py  test_validators_schematics.py
tests/commands/: test_setup.py  test_version.py
tests/contrib/scrapy/: schema.json  test_extensions.py  test_item_validation_monitor.py  test_monitors_field_coverage.py  test_pipeline_cerberus.py  test_pipelines.py  test_runners.py
tests/contrib/stats/: test_dashcollectionsstats.py  test_localstoragestats.py
tests/contrib/utils/: test_attributes.py
tests/contrib/validation/: test_item_validation_pipeline.py
tests/decorators/: test_commands.py
tests/fixtures/: bad_schema.json  cases.py  descriptions.py  expressions.py  items.py  json.py  levels.py  names.py  naming.py  ordering.py  rules.py  schemas.py  stats.py  suites.py  validators.py
tests/rules/: test_managers.py  test_rules.py
tests/utils/: commands.py  test_commands.py  test_field_coverage.py  test_settings.py  test_web.py  test_zyte.py
(+93 files in other folders)
